test/errors/implicitModule.compopts
--detailed-errors # implicitModule-detailed.good
--no-detailed-errors # implicitModule-brief.good
